testsuite/tests/properties/invalid_lambda_arg_type/find_no_index.lkt
import common

class ExampleBlock: BaseExampleBlock {
    @exported fun p(): Entity[Example] =
        node.items.find((e: Int) => e != 0)
}
